# multipartus-downloader

./: .env  .env.example  README.md  biome.json  components.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-and-publish.yml
scripts/: download-ffmpeg.ts
src/: App.tsx  app.css  app.tsx  lex.d.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  downloader.rs  lib.rs  main.rs  prelude.rs
src-tauri/src/commands/: downloader.rs
src/components/: download-form.tsx  lecture-selector.tsx  settings-dialog.tsx  subject-selector.tsx  video-selector.tsx
src/components/ui/: button.tsx  checkbox.tsx  dialog.tsx  load-dots.tsx  select.tsx  sonner.tsx  tooltip.tsx
src/lib/: atoms.ts  lex.ts  logto.ts  logto.tsx
src/routes/: app.tsx  download.tsx  index.tsx  layout.tsx
