[package]
name = "multipartus-downloader"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "multipartus_downloader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tauri-plugin-shell = "2"
tauri-plugin-oauth = "2"
tauri-plugin-http = "2.3.0"
anyhow = "1.0.96"
tauri-plugin-dialog = "2"
tokio = "1.43.0"
tokio-util = "0.7.14"
dotenvy_macro = "0.15.7"
dir-size = "0.1.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-appender = "0.2.3"
